--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId '申请的appid对应的包名'
+        applicationId '申请的appid'
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
