--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     // json解析库(必须)
     implementation 'com.alibaba:fastjson:1.2.32'
     // 艾狄墨墨搏公共组件库(使⽤用艾狄墨墨搏⼴广告SDK时可不不依赖，其余情况必须)
-    implementation(name: 'common-release', ext: 'aar')
+    implementation(name: 'common-release-1.0.1', ext: 'aar')
     // ⼀键登录SDK
-    implementation(name: 'onekeylogin-release', ext: 'aar')
+    implementation(name: 'onekeylogin-release-1.1.1', ext: 'aar')
 }
