升级一键登录

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "http://101.37.191.20:9091/repository/maven-public/"
+        }
     }
 }
 
